Adding Latest Project info

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 other courses when can I read for free to teach myself. As a first step to being a
                 Web Developer, I just created this Website inorder to demonstrate my passion, skills, and development in the world of technology.</p>
 
-            <a href="#" class="btn">Download Resume</a>
+            <a href="resume/Resume_26.pdf" download="Resume_Eric-Jay-Angelo-Samonte" class="btn">Download Resume</a>
         </div>
 
         <div class="home-img">
@@ -111,53 +111,52 @@
                 <div class="portfolio-layer">
                     <h4>Personal Website</h4>
                     <p>Passionate about creating responsive, user-friendly websites with clean design 
-                        and seamless experiences. Skilled in HTML, CSS, JavaScript, and modern 
-                        frameworks, dedicated to turning ideas into interactive digital website.</p>
+                        and seamless experiences. Skilled in HTML, CSS, JavaScript, TypeScript, and React, dedicated to turning ideas into interactive digital website.</p>
                     <!-- <a href="#"><i class='bx bx-code-alt' ></i></a> -->
                 </div>
             </div>
 
             <div class="portfolio-box">
-                <img src="image/firefly.png" alt="">
+                <img src="image/blog.png" alt="">
                 <div class="portfolio-layer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, tempora?</p>
+                    <h4>Blog Website</h4>
+                    <p>Created a responsive blog website using TypeScript, CSS, React, Supabase. The site features a clean design with a navigation menu, blog posts, and a contact form.</p>
+                    <a href="https://comforting-crisp-58e1eb.netlify.app/" target="_blank"><i class='bx bx-code-alt' ></i></i></a>
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+                <img src="" alt="No Project yet">
+                <div class="portfolio-layer">
+                    <h4>No Project Yet</h4>
+                    <p></p>
                     <!-- <a href="#"><i class='bx bx-code-alt' ></i></i></a> -->
                 </div>
             </div>
 
             <div class="portfolio-box">
-                <img src="image/firefly.png" alt="">
+                <img src="" alt="No Project yet">
                 <div class="portfolio-layer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, tempora?</p>
-                    <!-- <a href="#"><i class='bx bx-code-alt' ></i></i></a> -->
-                </div>
-            </div>
-
-            <div class="portfolio-box">
-                <img src="image/firefly.png" alt="">
-                <div class="portfolio-layer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, tempora?</p>
+                    <h4>No Project yet</h4>
+                    <p></p>
                     <!-- <a href="#"><i class='bx bx-code-alt' ></i></a> -->
                 </div>
             </div>
 
             <div class="portfolio-box">
-                <img src="image/firefly.png" alt="">
+                <img src="" alt="No Project yet">
                 <div class="portfolio-layer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, tempora?</p>
+                    <h4>No Project yet</h4>
+                    <p></p>
                     <!-- <a href="#"><i class='bx bx-code-alt' ></i></a> -->
                 </div>
             </div>   
 
             <div class="portfolio-box">
-                <img src="image/firefly.png" alt="">
+                <img src="" alt="No Project yet">
                 <div class="portfolio-layer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, tempora?</p>
+                    <h4>No Project yet</h4>
+                    <p></p>
                     <!-- <a href="#"><i class='bx bx-code-alt' ></i></a> -->
                 </div>    
             </div>
